# Aether-quant

./: .dockerignore  .env.compose.example  .env.live.example  .gitignore  Dockerfile  Dockerfile.retraining_worker  Dockerfile.telegram_worker  Dockerfile.trigger_worker  Dockerfile.worker  Dockerfile.workers  LICENSE  README.md  aq_cli.py  config.json  dashboard.html  docker-compose.yml  generate_backtest_report.py  lean.json  main.py  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements-worker.txt  requirements.txt  risk_controls.py  train.py  train_gating.py  train_multitask.py  train_sequence.py  train_strategy_selector.py  train_topology.py  volatility_dashboard.html
.av/: config
.devcontainer/: devcontainer.json
.githooks/: pre-commit
analyzer/: README.md  __init__.py  market_analyzer.py
audit/: README.md  __init__.py  hash_chain.py  postgres_audit.py  postgres_worker.py  redis_queue.py  status_export.py
cpp_inference_ext/: README.md  pyproject.toml  setup.py
data_pipeline/: README.md  __init__.py  dividend_backfill.py  fetch.py  fred_backfill.py  ib_backfill.py  v2_manifest.py  yfinance_backfill.py
development/: Changelog.md  Problems.md  README.md  asset_universe.md  infrastructure.md  project_structure.md  v2_architecture.md
docs/: v2_architecture.md
execution/: README.md  __init__.py  config_cache.py  lean_config_render.py  live_credentials.py  live_credentials_io.py  order_gate.py  paper_readiness.py  paper_readiness_io.py  paper_readiness_report.py  paper_readiness_scheduler.py  runtime_config_io.py  secret_scan.py
experience/: README.md  __init__.py  observation_metrics.py  postgres_worker.py  redis_queue.py  simulated_portfolio.py
experts/: README.md  __init__.py  expert_datasets.py
features/: README.md  __init__.py  bond_features.py  derivatives_macro_features.py  macro_features.py  options_greeks.py  technical_indicators.py
inference/: README.md  __init__.py  exported_model.py  parallel_inference.py  strategy_selector_inference.py
infrastructure/: README.md
liquidity/: README.md  __init__.py  market_liquidity.py
ml/: README.md  gating_model.json  gating_training_metrics.json  multitask_feature_schema.json  multitask_model.json  multitask_training_metrics.json  sequence_feature_schema.json  sequence_model.json  sequence_training_metrics.json
moe/: README.md  __init__.py  gating.py
monitoring/: README.md  __init__.py  api_server.py  assets_status.py  neural_network_state.py
notifications/: README.md  __init__.py  postgres_telegram.py  telegram_alerts.py  telegram_client.py  telegram_worker.py
performance/: README.md  __init__.py  postgres_triggers.py  rank_ic_monitor.py  trigger_worker.py  triggers.py
portfolio/: README.md  __init__.py  book_construction.py  options_arbitrage_detector.py  options_assignment_risk.py  options_margin_sizing.py  options_strategy.py
regime/: README.md  __init__.py  market_regime.py
retraining/: README.md  (+12 more)
(+225 files in other folders)
