[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-quant"
dynamic = ["version"]
description = "Aether Quant convenience CLI"
requires-python = ">=3.10"

# Version comes from the git tag that triggered the release (e.g. v2.2.0 ->
# 2.2.0) - no manual version bump anywhere in this repo. Falls back to a
# 0.0.dev<N>+g<hash>-style version for untagged/local dev installs (e.g.
# `pip install -e .` without ever having tagged), so the existing local `aq`
# CLI workflow is unaffected.
[tool.setuptools_scm]

[project.scripts]
aq = "aq_cli:main"

[tool.setuptools]
# Explicit, not auto-discovered: backtests/*/code/ contains full copies of
# this repo's packages (each backtest run snapshots the algorithm code), so
# unrestricted package discovery from repo root would pick up duplicates.
# List only what aq_cli.py actually imports directly (including
# transitively) - extend this list if a future aq subcommand needs another
# first-party module/package imported in-process rather than invoked via
# subprocess. `execution` was added after `risk/manual_override.py` gained
# a `from execution.config_cache import read_cached` import - a real
# regression this exact comment exists to prevent from recurring (the
# installed `aq` command failed with `ModuleNotFoundError: No module named
# 'execution'` until this was added, even though `python -m pytest`/the
# Lean container both masked it by putting the repo root on sys.path
# directly).
py-modules = ["aq_cli", "generate_backtest_report"]
packages = ["risk", "execution"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Bare `pytest` (not `python -m pytest`) never gets the repo root on
# sys.path on its own - it was only ever working locally because everyone
# invoked it as `python -m pytest`, which Python itself prepends the CWD for.
# pytest's own `pythonpath` option makes this work identically regardless of
# how pytest is invoked (bare console script, python -m, any OS, CI).
pythonpath = ["."]
